# AI-Speak-System-ESP32-PC

./: CMakeLists.txt  README.md  build.sh  sdkconfig.esp32dev  sdkconfig.esp32dev.old
_core/: CMakeLists.txt  core.cpp  core.hpp  interface.cpp  interface.hpp
_core/fs/: fs.cpp  fs.hpp
_core/hal/flash/: nv.cpp  nv.hpp
_core/hal/wifi/: wifi.cpp  wifi.hpp
_crypt/: CMakeLists.txt  Key.hpp  SD.cpp  SD.hpp
_inf/: CMakeLists.txt  interface.cpp  interface.hpp
app/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
